# snowChat

./: .gitignore  ingest.py  pyproject.toml
utils/: snow_connect.py
