[tool.poetry]
name = "snowchat"
version = "0.1.0"
description = "natural language processing chatbot for snowflake"
authors = ["Faithful <40880554+faithfulalabi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
langchain = "0.0.220"
pandas = "1.5.0"
pydantic = "1.10.8"
snowflake-snowpark-python = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
